--- a/htmlbib/pkg/package.json
+++ b/htmlbib/pkg/package.json
@@ -18,5 +18,7 @@
   ],
   "module": "htmlbib.js",
   "types": "htmlbib.d.ts",
-  "sideEffects": false
+  "sideEffects": [
+    "./snippets/*"
+  ]
 }
